--- a/custom-bootstrap.scss
+++ b/custom-bootstrap.scss
@@ -16,7 +16,7 @@
 $new-primary: rgb(174, 31, 174);
 $new-secondary: rgb(201, 201, 201);
 $new-danger: rgb(244, 127, 43);
-$stefano: rgb(12, 143, 143);
+$newì: rgb(12, 143, 143);
 
 $new-theme-colors: (
   'primary': $new-primary,
