--- a/custom-bootstrap.css
+++ b/custom-bootstrap.css
@@ -42,6 +42,8 @@
   --bs-andrea: rgb(163, 68, 226);
   --bs-dark-mode: rgb(34, 33, 34);
   --bs-epicode-1: #5726c3;
+  --bs-epicode-2: #8625a5;
+  --bs-epicode-3: #cb2376;
   --bs-primary-rgb: 211, 35, 117;
   --bs-secondary-rgb: 76, 24, 145;
   --bs-success-rgb: 25, 135, 84;
@@ -54,6 +56,8 @@
   --bs-andrea-rgb: 163, 68, 226;
   --bs-dark-mode-rgb: 34, 33, 34;
   --bs-epicode-1-rgb: 87, 38, 195;
+  --bs-epicode-2-rgb: 134, 37, 165;
+  --bs-epicode-3-rgb: 203, 35, 118;
   --bs-primary-text-emphasis: #052c65;
   --bs-secondary-text-emphasis: #2b2f32;
   --bs-success-text-emphasis: #0a3622;
@@ -3269,6 +3273,40 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #5726c3;
 }
 
+.btn-epicode-2 {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #8625a5;
+  --bs-btn-border-color: #8625a5;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #721f8c;
+  --bs-btn-hover-border-color: #6b1e84;
+  --bs-btn-focus-shadow-rgb: 152, 70, 179;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #6b1e84;
+  --bs-btn-active-border-color: #651c7c;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #8625a5;
+  --bs-btn-disabled-border-color: #8625a5;
+}
+
+.btn-epicode-3 {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #cb2376;
+  --bs-btn-border-color: #cb2376;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #ad1e64;
+  --bs-btn-hover-border-color: #a21c5e;
+  --bs-btn-focus-shadow-rgb: 211, 68, 139;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #a21c5e;
+  --bs-btn-active-border-color: #981a59;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #cb2376;
+  --bs-btn-disabled-border-color: #cb2376;
+}
+
 .btn-outline-primary {
   --bs-btn-color: rgb(211, 35, 117);
   --bs-btn-border-color: rgb(211, 35, 117);
@@ -3470,6 +3508,40 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #5726c3;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #5726c3;
+  --bs-gradient: none;
+}
+
+.btn-outline-epicode-2 {
+  --bs-btn-color: #8625a5;
+  --bs-btn-border-color: #8625a5;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #8625a5;
+  --bs-btn-hover-border-color: #8625a5;
+  --bs-btn-focus-shadow-rgb: 134, 37, 165;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #8625a5;
+  --bs-btn-active-border-color: #8625a5;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #8625a5;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #8625a5;
+  --bs-gradient: none;
+}
+
+.btn-outline-epicode-3 {
+  --bs-btn-color: #cb2376;
+  --bs-btn-border-color: #cb2376;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #cb2376;
+  --bs-btn-hover-border-color: #cb2376;
+  --bs-btn-focus-shadow-rgb: 203, 35, 118;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #cb2376;
+  --bs-btn-active-border-color: #cb2376;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #cb2376;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #cb2376;
   --bs-gradient: none;
 }
 
@@ -5126,6 +5198,20 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-epicode-1-text-emphasis);
 }
 
+.alert-epicode-2 {
+  --bs-alert-color: var(--bs-epicode-2-text-emphasis);
+  --bs-alert-bg: var(--bs-epicode-2-bg-subtle);
+  --bs-alert-border-color: var(--bs-epicode-2-border-subtle);
+  --bs-alert-link-color: var(--bs-epicode-2-text-emphasis);
+}
+
+.alert-epicode-3 {
+  --bs-alert-color: var(--bs-epicode-3-text-emphasis);
+  --bs-alert-bg: var(--bs-epicode-3-bg-subtle);
+  --bs-alert-border-color: var(--bs-epicode-3-border-subtle);
+  --bs-alert-link-color: var(--bs-epicode-3-text-emphasis);
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: var(--bs-progress-height);
@@ -5581,6 +5667,32 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-epicode-1-bg-subtle);
   --bs-list-group-active-bg: var(--bs-epicode-1-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-epicode-1-text-emphasis);
+}
+
+.list-group-item-epicode-2 {
+  --bs-list-group-color: var(--bs-epicode-2-text-emphasis);
+  --bs-list-group-bg: var(--bs-epicode-2-bg-subtle);
+  --bs-list-group-border-color: var(--bs-epicode-2-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-epicode-2-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-epicode-2-border-subtle);
+  --bs-list-group-active-color: var(--bs-epicode-2-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-epicode-2-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-epicode-2-text-emphasis);
+}
+
+.list-group-item-epicode-3 {
+  --bs-list-group-color: var(--bs-epicode-3-text-emphasis);
+  --bs-list-group-bg: var(--bs-epicode-3-bg-subtle);
+  --bs-list-group-border-color: var(--bs-epicode-3-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-epicode-3-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-epicode-3-border-subtle);
+  --bs-list-group-active-color: var(--bs-epicode-3-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-epicode-3-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-epicode-3-text-emphasis);
 }
 
 .btn-close {
@@ -7135,6 +7247,16 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-epicode-1-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-epicode-2 {
+  color: #fff !important;
+  background-color: RGBA(var(--bs-epicode-2-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-epicode-3 {
+  color: #fff !important;
+  background-color: RGBA(var(--bs-epicode-3-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: RGBA(var(--bs-primary-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -7241,6 +7363,24 @@ textarea.form-control-lg {
 .link-epicode-1:hover, .link-epicode-1:focus {
   color: RGBA(70, 30, 156, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(70, 30, 156, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-epicode-2 {
+  color: RGBA(var(--bs-epicode-2-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-epicode-2-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-epicode-2:hover, .link-epicode-2:focus {
+  color: RGBA(107, 30, 132, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(107, 30, 132, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-epicode-3 {
+  color: RGBA(var(--bs-epicode-3-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-epicode-3-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-epicode-3:hover, .link-epicode-3:focus {
+  color: RGBA(162, 28, 94, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(162, 28, 94, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
@@ -7699,6 +7839,14 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-epicode-1-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-epicode-2 {
+  --bs-focus-ring-color: rgba(var(--bs-epicode-2-rgb), var(--bs-focus-ring-opacity));
+}
+
+.focus-ring-epicode-3 {
+  --bs-focus-ring-color: rgba(var(--bs-epicode-3-rgb), var(--bs-focus-ring-opacity));
+}
+
 .position-static {
   position: static !important;
 }
@@ -7877,6 +8025,16 @@ textarea.form-control-lg {
 .border-epicode-1 {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-epicode-1-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-epicode-2 {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-epicode-2-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-epicode-3 {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-epicode-3-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-black {
@@ -8929,6 +9087,16 @@ textarea.form-control-lg {
   color: rgba(var(--bs-epicode-1-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-epicode-2 {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-epicode-2-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-epicode-3 {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-epicode-3-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -9151,6 +9319,16 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-epicode-1-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-epicode-2 {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-epicode-2-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
+.link-underline-epicode-3 {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-epicode-3-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-link-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -9262,6 +9440,16 @@ textarea.form-control-lg {
 .bg-epicode-1 {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-epicode-1-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-epicode-2 {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-epicode-2-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-epicode-3 {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-epicode-3-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
